style.css
/*---HEADER---*/
@media(min-width: 600px) {

body {
  font-family: 'Spline Sans Mono', monospace; 
  max-width: 100%;
  margin-top: 0px;
  background-color: rgba(158, 158, 158, 0.46)
}

/* STICKY NAV */

 #top-nav-bar {
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  list-style: none;
  padding-top: 40px;
  justify-content: space-evenly;
  background-color: transparent
}

/* STICKY NAV */
.nav {
    cursor: pointer;
}
li {
  padding-right: 5%;
  font-size: 14px;
}
.top-nav-number {
  font-weight: 600;
  padding-right: .5px;
}
#resume {
  font-weight: 600;
  color: rgba(235, 37, 6, 0.8);
} 

#name {
  font-weight: 600;
  font-size: 60px;
  margin-top: 120px;
  width:100%;
  text-align: center;
}

/*---BODY---*/

/*--INTRO CONTENT---*/
 .introduction {
  display: flex;
  justify-content: center;
  font-family: 'Spline Sans Mono', monospace;
  font-size: 16px;
  margin-top: 20%;
}
.body-title {
  font-weight: 300;
}
.intro-content {
  display: flex;
  justify-content: center;
}
#selfie {
  border: 1px solid rgba(235, 37, 6, 0.8);
  border-radius: 10px;
  border-radius: 9px;
  margin-left: 30px;
  margin-top: 20px;;
  width: auto;
  height: 18vh;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
}
#intro-text {
  width: 40%;
  font-size: 14px;
  margin-left: 30px;
} 


/*--PROJECT CONTENT---*/
  .project-page {
  display: flex;
  justify-content: center;
  font-family: 'Spline Sans Mono', monospace;
  font-size: 16px;
  margin-top: 30%;
  padding-top: 10%;
 
}
.carousel-images {
  display: flex;
  justify-content: space-evenly;
  margin-top: 14px;
  align-content: center; 
}
#project-1 {
  border: 1px solid rgba(235, 37, 6, 0.8);
  border-radius: 10px;
  border-radius: 9px;
  width: auto;
  height: 30vh;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
  cursor: pointer;
}
#project-2 {
  border: 1px solid rgba(235, 37, 6, 0.8);
  border-radius: 10px;
  border-radius: 9px;
  width: auto;
  height: 30vh;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
  cursor:pointer;
}
#project-3 {
  border: 1px solid rgba(235, 37, 6, 0.8);
  border-radius: 10px;
  border-radius: 9px;
  width: auto;
  height: 30vh;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
  cursor: pointer;
} 

/*--EXPERIENCE CONTENT---*/
.experience-page {
  display: flex;
  justify-content: center;
  font-family: 'Spline Sans Mono', monospace;
  font-size: 16px;
  padding-top: 90px;
  margin-top: 50%;
}
#experience-content {
  justify-content: center;
  margin-left: 10%;
  width: 40%
}

.contact-page {
  display: flex;
  justify-content: center;
  font-size: 13px;
  margin-top: 40%;
  align-content: center; 
}
.sit-title {
  display: flex;
  justify-content: center;
  color: rgba(235, 37, 6, 0.8);
}
.stay-in-touch {
  display: flex;
  justify-content: center;
}
#sit-comment {
  font-size: 14px;
  text-align: center;
  font-weight: 300;
  width: 20%;
}
.sit-button {
  display: flex;
  justify-content: center;
  margin-top: 60px;
  
}
.sit {
  font-family: 'Spline Sans Mono', monospace;
  font-weight: 600;
  border: 1px solid rgba(235, 37, 6, 0.8);
  border-radius: 4px;
  background-color: transparent;
  color: rgba(235, 37, 6, 0.8);
  padding: 10px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
  cursor: pointer;
}

.social-media {
  display: flex;
  justify-content: space-evenly;
  margin-top: 10%;
}
.icons {
  width: 35px;
  cursor: pointer;
}
}
/* MODAL */

.modal-container {
  transition: 0.9s;
}
.resume-modal {
  display: flex;
  justify-content: center;
  transition: 0.3s ease;
}
.modal-button {
  top: 0;
  right: 0;
  margin-top:10%;
  margin-right: 10%;
  position: fixed;
  font-family: 'Spline Sans Mono', monospace;
  border: 1px solid rgba(235, 37, 6, 0.8);
  border-radius: 4px;
  background-color: transparent;
  color: rgba(235, 37, 6, 0.8);
  padding: 10px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
  cursor: pointer;
}
#resume-example {
  margin-top: 5%;
  border: 1px solid rgba(235, 37, 6, 0.8);
  border-radius: 10px;
  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.5);
  transition: 0.5s;
  position: fixed;
  width: 550px;
}
.hide {
  display: none;
}


/* projects modal */
.projects-modal {
  display: flex;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  margin-top: 20%
}
#first-project {
  text-align: center;
  height: 60vh;
  width: 40vw;
  border: 1px solid rgba(235, 37, 6, 0.8);
  border-radius: 8px;
  background-color: rgba(158, 158, 158, 0.46);
  padding: 20px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}
.project-modal-button {
  top: 0;
  right: 0;
  margin-top:20%;
  margin-right: 10%;
  position: fixed;
  font-family: 'Spline Sans Mono', monospace;
  border: 1px solid rgba(235, 37, 6, 0.8);
  border-radius: 4px;
  background-color: transparent;
  color: rgba(235, 37, 6, 0.8);
  padding: 10px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
  cursor: pointer;
}

.projects-modal2 {
  display: flex;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  margin-top: 20%
}
#first-project2 {
  text-align: center;
  height: 60vh;
  width: 40vw;
  border: 1px solid rgba(235, 37, 6, 0.8);
  border-radius: 8px;
  background-color: rgba(158, 158, 158, 0.46);
  padding: 20px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}
.project-modal-button2 {
  top: 0;
  right: 0;
  margin-top:20%;
  margin-right: 10%;
  position: fixed;
  font-family: 'Spline Sans Mono', monospace;
  border: 1px solid rgba(235, 37, 6, 0.8);
  border-radius: 4px;
  background-color: transparent;
  color: rgba(235, 37, 6, 0.8);
  padding: 10px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
  cursor: pointer;
}

.projects-modal3 {
  display: flex;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  margin-top: 20%
}
/* ... */

